cluster/tekkom-bot/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tekkom-bot
  name: tekkom-bot
  namespace: tekkom-bot
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: tekkom-bot
  template:
    metadata:
      labels:
        app: tekkom-bot
    spec:
      imagePullSecrets:
        - name: tekkom-bot-pull-secret
      containers:
        - name: tekkom-bot
          image: registry.login.no/tekkom/playground/tekkom-bot:2.2.4@sha256:55529c2893b0128b43a5b67ce0e07a1efb0048736dca4777b89585ec6b3fe696
          imagePullPolicy: Always
          ports:
            - containerPort: 6969
              protocol: TCP
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: tekkom-bot
  namespace: tekkom-bot
spec:
  type: ClusterIP
  selector:
    app: tekkom-bot
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 6969
